# periodic-time-vis

./: .gitignore  LICENSE  README.md  package-lock.json  package.json  pyproject.toml  rollup.config.js  run.sh  tsconfig.json
assets/: backend.css  backend.html  common.css
backend/: __init__.py  dataset.py  dataset_discovery.py  socket.py
backend/dataset_generation/: sunspots.py  synthetic.py  synthetic2.py  synthetic3.py  tides.py
datasets/: README.md  sunspots_us_daily.csv  tides_honolulu.csv  tides_us.csv
datasets/sunspots/: README.md  run.sh
datasets/tides/: README.md  collect_tides_honolulu.py  collect_tides_us.py  convert_tides_honolulu.py  convert_tides_us.py  station_ids.json
documentation/explanation-animation/: create-data.py  rollup.config.js  tsconfig.json
documentation/explanation-animation/assets/: data.json  index.html  style.css
documentation/explanation-animation/src/: entry.ts  render.ts
documentation/explanation-animation/src/types/common/: types.d.ts
src/: dataset.ts  entry-backend.ts  interpolated-color-schemes.ts  nonoverlapping-axis-labels.ts  output-function.ts  parametrized-shape.ts  period-preview.ts  rectangular-bin-popup.ts  scented-widget.ts  time-slider.ts  utils.ts
src/demo/: cartesian-projection.ts  visualization.ts
src/types/common/: package.json  types.d.ts
