[tool.poetry]
name = "backend"
version = "0.1.0"
description = ""
authors = ["Max Franke <Max.Franke@vis.uni-stuttgart.de>"]
license = "MIT"

[tool.poetry.dependencies]
python = "<3.13,>=3.9"
Flask = "^2.2.5"
gunicorn = "^22.0.0"
flask-sock = "^0.6.0"
requests = "^2.28.2"
beautifulsoup4 = "^4.12.2"
pyproj = "^3.5.0"
scipy = "^1.11.1"
numpy = "^1.26.4"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
